--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8">
 
   <title>Happy birthday to you</title>
-
+  <link type="text/css" rel="stylesheet" href="https://rajs2001.github.io/Birthdays/styles.css"
+  <script src="https://rajs2001.github.io/Birthdays/script.js"></script>
 </head>
 
 <body>
