--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link >
+    <link
+      href="style.css"
+      rel="stylesheet"
+     />
   </head>
   <body>
     <div class="container">
