--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <header>
-        <h1 class="animate-text">Happy Birthday, Rajesh!</h1>
+        <h1 class="animate-text">Happy Birthday, <span class="wish-text" id="name-text-2">Rajesh</span></h1>
       </header>
       <main>
         <div class="image-container">
