hide some content

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <span class="wish-text">unforgettable moments</span>. May this year
             bring you <span class="wish-text">new adventures</span>,
             <span class="wish-text">exciting opportunities</span>, and
-            <span class="wish-text">countless reasons to smile</span>. Your
+            <span class="wish-text">countless reasons to smile</span>. <!-- Your
             friendship has been a true
             <span class="wish-text">blessing</span> in my life, and I'm grateful
-            for all the memories we've shared.
+            for all the memories we've shared. -->
           </p>
           <p class="animate-text">
             May your <span class="wish-text">dreams take flight</span> and your
